--- a/app/views/personnalities/show.html.erb
+++ b/app/views/personnalities/show.html.erb
@@ -1,7 +1,24 @@
-<h1>Personnalities#show</h1>
-<p>Find me in app/views/personnalities/show.html.erb</p>
+<div class="header-content">
+  <div class="profile-avatar">
+    <%= image_tag "https://kitt.lewagon.com/placeholder/users/arthur-littm", class:"avatar-large", alt:"Le Wagon" , width: 200 %>
+    <%= @personnality.skills %>
+    <p>rating: etoile - <%=  @personnality.user.address %></p>
+  </div>
+</div>
 
+<div class="body-content">
+  <div class="personnalit-description">
+    <div class="description">
 
- <%= @personnality.user.firstname %>
+    </div>
 
-<%= @personnality.description %>
+    <div class="calender">
+
+    </div>
+  </div>
+
+  <div class="sidebar">
+
+  </div>
+</div>
+<%# <%= <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" /> %> %>
