--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<%= simple_form_for(resource, as: resource_name, url: user_registration_path,
+  data: {turbo: false}) do |f| %>  <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :email,
@@ -15,6 +15,14 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :firstname,
+                required: true %>
+    <%= f.input :lastname,
+                required: true %>
+    <%= f.input :phone,
+                required: false %>
+    <%= f.input :address,
+                required: false %>
   </div>
 
   <div class="form-actions">
