--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,14 @@
   </head>
 
   <body>
-  <%= render "shared/navbar" %>
-    <%= yield %>
-     <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
-
+    <div id="page">
+      <%= render "shared/navbar" %>
+      <div id="content">
+        <%= yield %>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+      </div>
+      <%= render "shared/footer" %>
+    </div>
   </body>
 </html>
