--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -43,7 +43,7 @@
 }
 
 .button-rounded {
-  border: 1px solid #DDDDDD;
+  border: 1px solid #F3F3F3;
   padding: 5px 10px 5px 10px;
   border-radius: 28px;
   transition: box-shadow 1s ease-out 100ms
