--- a/app/views/personnalities/show.html.erb
+++ b/app/views/personnalities/show.html.erb
@@ -2,12 +2,12 @@
   <div class="profile-avatar">
     <%= image_tag "https://kitt.lewagon.com/placeholder/users/arthur-littm", class:"avatar-large", alt:"Le Wagon" , width: 200 %>
     <%= @personnality.skills %>
-    <p>rating: etoile - <%=  @personnality.user.address %></p>
+    <p>rating: etoiles - <%=  @personnality.user.address %></p>
   </div>
 </div>
 
 <div class="body-content">
-  <div class="personnalit-description">
+  <div class="personnality-description">
     <div class="description">
 
     </div>
@@ -21,4 +21,3 @@
 
   </div>
 </div>
-<%# <%= <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" /> %> %>
