--- a/app/views/personnalities/_form.html.erb
+++ b/app/views/personnalities/_form.html.erb
@@ -2,5 +2,7 @@
   <%= f.input :description %>
   <%= f.input :skills %>
   <%= f.input :category %>
+  <%= f.input :price %>
+  <%= f.input :rating %>
   <%= f.button :submit %>
 <% end %>
