--- a/app/views/personnalities/edit.html.erb
+++ b/app/views/personnalities/edit.html.erb
@@ -1,2 +1,3 @@
 <h1>Personnalities#edit</h1>
 <p>Find me in app/views/personnalities/edit.html.erb</p>
+<%= render "form", personnality: @personnality %>
