--- a/app/views/personnalities/_booking-form.html.erb
+++ b/app/views/personnalities/_booking-form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for(@booking) do |f| %>
-  <%= f.input :date_reservation %>
+  <%= f.input :start_date %>
+  <%= f.input :end_date %>
   <%= f.button :submit, class:"btn btn-flat" %>
 <% end %>
