--- a/app/views/personnalities/index.html.erb
+++ b/app/views/personnalities/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="d-flex">
   <% @personnalities.each do |personnality| %>
-      <div class="card-trip m-2 col-4">
+      <div class="card-trip m-1 col-4">
         <%= link_to personnality_path(personnality), class:"card-trip" do %>
           <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
         <% end %>
@@ -11,10 +11,10 @@
           <div class="card-trip-infos  d-flex align-items-start">
           <div class="add-favorite position-absolute top-0 end-0"><i class="fa-regular fa-heart"></i></div>
             <div class="personnality-infos">
-              <h2><%= personnality.user.firstname %> <%= personnality.user.lastname %></h2>
-              <h6><%= personnality.skills %></h6>
+              <h2><%= personnality.name %></h2>
+              <h6><%= personnality.skills.name %></h6>
               <p><%= personnality.description %></p>
-              <h3><%= personnality.price %></h3>
+              <h3><%= personnality.price %> € / jour</h3>
             </div>
             <h2 class="card-trip-pricing d-flex"><i class="fa-solid fa-star rose px-1"></i> <%= personnality.rating %></h2>
           </div>
