--- a/app/views/personnalities/show.html.erb
+++ b/app/views/personnalities/show.html.erb
@@ -3,7 +3,7 @@
     <div class="profile-avatar">
       <%= image_tag "https://kitt.lewagon.com/placeholder/users/arthur-littm", class:"avatar-large", alt:"Le Wagon" , width: 200 %>
       <h1><%= @personnality.skills %></h1>
-      <p><strong>rating: etoile - <%=  @personnality.user.address %></strong></p>
+      <h2 class="card-trip-pricing d-flex"><i class="fa-solid fa-star rose px-1"></i> <%= @personnality.rating %></h2>
     </div>
   </div>
 
@@ -21,8 +21,8 @@
     </div>
 
     <div class="personnality-sidebar" style="border: 1px solid rgb(221, 221, 221); border-radius: 12px; padding: 24px; box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;">
-      <h2>personnalities.price</h2><p>par jour</p>
-      <p><strong>personnalities.rating</strong></p>
+      <h2><%= @personnality.price %>€ par jour</h2>
+      <h2 class="card-trip-pricing d-flex"><i class="fa-solid fa-star rose px-1"></i> <%= @personnality.rating %></h2>
       <%= render "booking-form", personnality: @personnality %>
     </div>
   </div>
