--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,17 +1,17 @@
 .btn-ghost {
-  color: #4A4A4A;
-  border: 1px solid #4A4A4A;
+  color: #1c1c1c;
   padding: 8px 24px;
-  border-radius: 50px;
-  font-weight: lighter;
-  opacity: 0.6;
+  border-radius: 20px;
+  font-weight: 600;
+  opacity: 0.8;
   transition: opacity 0.3s ease;
+  background-color: white;
 }
 
 .btn-ghost:hover {
   opacity: 1;
-  color: #4A4A4A;
-  border: 1px solid #4A4A4A;
+  color: white;
+  background-color: #FF0057;
 }
 
 .btn-flat {
