--- a/app/views/personnalities/edit.html.erb
+++ b/app/views/personnalities/edit.html.erb
@@ -1,3 +1,6 @@
-<h1>Personnalities#edit</h1>
-<p>Find me in app/views/personnalities/edit.html.erb</p>
-<%= render "form", personnality: @personnality %>
+<div class="d-flex justify-content-center">
+  <div class="flex-column w-50">
+    <h2>Editer la personnalité</h2>
+    <%= render "form", personnality: @personnality %>
+  </div>
+</div>
