--- a/app/views/personnalities/new.html.erb
+++ b/app/views/personnalities/new.html.erb
@@ -1,4 +1,8 @@
-<h1>Personnalities#new</h1>
-<p>Find me in app/views/personnalities/new.html.erb</p>
+<div class="d-flex justify-content-center">
+  <div class="flex-column w-50">
 
-<%= render "form", personnality: @personnality %>
+    <h2>Ajouter une nouvelle personnalité</h2>
+    <%= render "form", personnality: @personnality %>
+
+  </div>
+</div>
