--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,40 @@
-<h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: user_registration_path,
-  data: {turbo: false}) do |f| %>  <%= f.error_notification %>
+<div class="d-flex justify-content-center">
+  <div class="flex-column w-50">
+    <h2>Inscription</h2>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :firstname,
-                required: true %>
-    <%= f.input :lastname,
-                required: true %>
-    <%= f.input :phone,
-                required: false %>
-    <%= f.input :address,
-                required: false %>
+    <%= simple_form_for(resource, as: resource_name, url: user_registration_path,
+      data: {turbo: false}) do |f| %>  <%= f.error_notification %>
+
+      <div class="form-inputs">
+        <%= f.input :email,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "email" }%>
+        <%= f.input :password,
+                    required: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                    required: true,
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :firstname,
+                    required: true %>
+        <%= f.input :lastname,
+                    required: true %>
+        <%= f.input :phone,
+                    required: false %>
+        <%= f.input :address,
+                    required: false %>
+        <%= f.input :photo, as: :file %>
+
+      </div>
+
+      <div class="form-actions">
+        <%= f.button :submit, "Sign up" %>
+      </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>>
