--- a/app/views/personnalities/index.html.erb
+++ b/app/views/personnalities/index.html.erb
@@ -1,24 +1,2 @@
-
 <%= render "list-skills" %>
-
-<div class="d-flex">
-  <% @personnalities.each do |personnality| %>
-      <div class="card-trip m-1 col-4">
-        <%= link_to personnality_path(personnality), class:"card-trip" do %>
-          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-        <% end %>
-        <%= link_to personnality_path(personnality), class:"linkdiv" do %>
-          <div class="card-trip-infos  d-flex align-items-start">
-          <div class="add-favorite position-absolute top-0 end-0"><i class="fa-regular fa-heart"></i></div>
-            <div class="personnality-infos">
-              <h2><%= personnality.name %></h2>
-              <h6><%= personnality.skills.name %></h6>
-              <p><%= personnality.description %></p>
-              <h3><%= personnality.price %> € / jour</h3>
-            </div>
-            <h2 class="card-trip-pricing d-flex"><i class="fa-solid fa-star rose px-1"></i> <%= personnality.rating %></h2>
-          </div>
-        <% end %>
-      </div>
-  <% end %>
-</div>
+<%= render "shared/personnality_card" %>
