--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,35 +5,37 @@
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse button-rounded " id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
 
+        <% if user_signed_in? %>
           <li class="nav-item dropdown-connect">
-            <i class="fa-solid fa-bars"></i>
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <%= current_user.firstname %> <%= current_user.lastname %>
+             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "My reservations", bookings_path, class: "dropdown-item padding-item item-bold" %>
-              <%= link_to "Add me on personnality", new_personnality_path, class: "dropdown-item padding-item" %>
-              <%= link_to "Edit my account user", edit_user_registration_path, class: "dropdown-item padding-item" %>
-              <%= link_to "Edit my personnality", edit_personnality_path(current_user), class: "dropdown-item padding-item" %>
+              <%= link_to "Mes reservations", bookings_path, class: "dropdown-item padding-item item-bold" %>
+              <%= link_to "Ajouter une personnalité", new_personnality_path, class: "dropdown-item padding-item" %>
+              <%= link_to "Editer mon compte utilisateur", edit_user_registration_path, class: "dropdown-item padding-item" %>
+              <%= link_to "Editer ma personnalité", edit_personnality_path(current_user), class: "dropdown-item padding-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item padding-item border-bottom" %>
-              <%= link_to "View the personnalities", personnalities_path, class: "dropdown-item padding-item" %>
-              <%= link_to "View my profile", personnality_path(current_user), class: "dropdown-item padding-item" %>
+              <%= link_to "Voir toutes les personnalités", personnalities_path, class: "dropdown-item padding-item" %>
+              <%= link_to "Voir mon profile", personnality_path(current_user), class: "dropdown-item padding-item" %>
           </li>
           </li>
         <% else %>
           <li class="nav-item d-flex align-items-center">
 
-            <i class="fa-solid fa-bars"></i>
+              <%= link_to "Connexion", new_user_session_path, class: "dropdown-item padding-item border-bottom" %>
+
               <%= image_tag "https://media.istockphoto.com/id/1337144146/vector/default-avatar-profile-icon-vector.jpg?s=612x612&w=0&k=20&c=BIbFwuv7FxTWvh5S3vB6bkT0Qv8Vn8N5Ffseq84ClGI=", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
 
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Inscription", new_personnality_path, class: "dropdown-item padding-item item-bold" %>
-              <%= link_to "Connexion", edit_user_registration_path, class: "dropdown-item padding-item border-bottom" %>
+              <%= link_to "Inscription", new_user_registration_path, class: "dropdown-item padding-item item-bold" %>
+              <%= link_to "Connexion", new_user_session_path, class: "dropdown-item padding-item border-bottom" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item padding-item" %>
             </div>
           </li>
