--- a/app/views/shared/_personnality_card.html.erb
+++ b/app/views/shared/_personnality_card.html.erb
@@ -1,20 +1,23 @@
 
-<div class="d-flex">
-  <% @personnalities.each do |personnality| %>
-      <div class="card-trip m-2 col-4">
+<div class="cards">
 
+  <% @personnalities.each do |personnality| %>
+      <div class="card-trip m-2">
         <%= link_to personnality_path(personnality), class:"card-trip" do %>
+        <% if personnality.photo.key? %>
+        <%= cl_image_tag personnality.photo.key, crop: :fill %>
+        <% else %>
           <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+          <% end %>
         <% end %>
         <%= link_to personnality_path(personnality), class:"linkdiv" do %>
           <div class="card-trip-infos  d-flex align-items-start">
           <div class="add-favorite position-absolute top-0 end-0"><i class="fa-regular fa-heart"></i></div>
             <div class="personnality-infos">
-              <h2><%= personnality.user.firstname %> <%= personnality.user.lastname %></h2>
-              <h6><%= personnality.skills %></h6>
+              <h2><%= personnality.name %></h2>
+              <h6><%= personnality.skills.name %></h6>
               <p><%= personnality.description %></p>
-              <h3><%= personnality.price %></h3>
-
+              <h3><%= personnality.price %> € / jour</h3>
 
             </div>
             <h2 class="card-trip-pricing d-flex"><i class="fa-solid fa-star rose px-1"></i> <%= personnality.rating %></h2>
