--- a/app/views/shared/_personnality_card.html.erb
+++ b/app/views/shared/_personnality_card.html.erb
@@ -4,10 +4,10 @@
   <% @personnalities.each do |personnality| %>
       <div class="card-trip m-2">
         <%= link_to personnality_path(personnality), class:"card-trip" do %>
-        <% if personnality.photo.key? %>
-        <%= cl_image_tag personnality.photo.key, crop: :fill %>
-        <% else %>
-          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+          <% if personnality.photo.key? %>
+            <%= cl_image_tag personnality.photo.key, crop: :fill %>
+          <% else %>
+            <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
           <% end %>
         <% end %>
         <%= link_to personnality_path(personnality), class:"linkdiv" do %>
@@ -15,7 +15,11 @@
           <div class="add-favorite position-absolute top-0 end-0"><i class="fa-regular fa-heart"></i></div>
             <div class="personnality-infos">
               <h2><%= personnality.name %></h2>
-              <h6><%= personnality.skills.name %></h6>
+              <h6>
+              <% @joinskills.each do |joinsk| %>
+<%= joinsk.skill.name %>
+<% end %>
+              </h6>
               <p><%= personnality.description %></p>
               <h3><%= personnality.price %> € / jour</h3>
 
@@ -23,6 +27,7 @@
             <h2 class="card-trip-pricing d-flex"><i class="fa-solid fa-star rose px-1"></i> <%= personnality.rating %></h2>
           </div>
         <% end %>
+
       </div>
   <% end %>
 </div>
