--- a/app/views/personnalities/_form.html.erb
+++ b/app/views/personnalities/_form.html.erb
@@ -4,5 +4,5 @@
   <%= f.input :price %>
   <%= f.input :rating %>
   <%= f.input :photo, as: :file %>
-  <%= f.button :submit %>
+  <%= f.button :submit, class:"btn-flat" %>
 <% end %>
