--- a/app/views/personnalities/show.html.erb
+++ b/app/views/personnalities/show.html.erb
@@ -2,8 +2,7 @@
   <div class="personnality-details">
     <div class="personnality-header">
       <div class="images">
-        <%# <%= cl_image_tag @personnality.photo.key, crop: :fill %> %>
-        <%= image_tag "img-test.jpg", alt:"Le Wagon" , width: 200 %>
+         <%= cl_image_tag @personnality.photo.key, crop: :fill %>
         <a class="btn btn-ghost" href="#"><i class="fa-solid fa-fire"></i> Super Hot</a>
       </div>
       <div class="skills">
