--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <h1>Mes réservations</h1>
-<p>Retrouvez ici tous vos réservations passées sur notre site.</p>
+<p>Retrouvez ici tous vos réservations passées sur notre site internet.</p>
 <p>Vous avez <%= @pending %> validations en attente</p>
 
 <% if current_user.owner? %>
