--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -55,6 +55,13 @@
  }
 
  .navbar .dropdown-item {
-  color: #c9c9c9;
+  color: #333;
  }
 
+ .name {
+  font-size: 12px;
+  float: left;
+  margin: 0;
+  line-height: 35px;
+  padding: 0 15px 0 5px;
+ }
