--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,3 +3,12 @@
     margin-bottom:20px
   }
 }
+.my-custom-class {
+  padding: 5px 0 5px 10px;
+  margin: 5px;
+  border: 1px solid #D23333;
+  width: 46%;
+  font-size: 14px;
+  text-transform: capitalize;
+  border-radius: 10px;
+}
