--- a/app/assets/stylesheets/components/_icone-list-pers.scss
+++ b/app/assets/stylesheets/components/_icone-list-pers.scss
@@ -6,7 +6,7 @@
 .personnality-infos:hover{
   opacity: 1;
   transition-duration:0.5s;
-  color:#FF0057;
+
 
   cursor: pointer;
 }
@@ -16,4 +16,20 @@
 
 .name-list-pers {
   font-size: 10px;
+}
+
+.rose {
+  color: #FF0057;
+}
+
+.miniicone {
+  font-size: 20px;
+}
+.personnality-infos {
+        h2{
+  margin-bottom: 0 !important;
+}
+}
+.icone-list-pers:hover{
+  color: #FF0057;
 }
