--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -28,7 +28,8 @@
     position: relative;
     height: auto;
     width: 100%;
-    object-fit: contain;
+    max-height: 500px;
+    object-fit:cover;
     margin-bottom: 10px;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
@@ -44,7 +45,7 @@
     display: flex;
     width: 100%;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 10px;
   }
 
   .personnality-content h2 {
@@ -79,3 +80,11 @@
     .purchase-sidebar .title .rating .fa-solid {
       padding-top: 3px;
     }
+.images {
+  margin-bottom: 20px;
+  max-height: 500px;
+}
+
+.sidestyle {
+  border: 1px solid rgb(221, 221, 221); border-radius: 12px; padding: 24px; box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
+}
