--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
       <div id="content">
         <div class="container py-4">
           <%= yield %>
-          <p class="notice"><%= notice %></p>
-          <p class="alert"><%= alert %></p>
+         <%= render "shared/flashes" %>
+
         </div>
       </div>
       <%= render "shared/footer" %>
