--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,22 +14,26 @@
 
         <% if user_signed_in? %>
           <li class="nav-item dropdown-connect">
-            <%= current_user.firstname %> <%= current_user.lastname %>
-             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <p class="name">Bienvenue <%= current_user.firstname %> <%= current_user.lastname %></p>
+            <% if current_user.photo.key? %>
+             <%= cl_image_tag current_user.photo.key, crop: :fill, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+             <% else %>
+            <%= image_tag "https://media.istockphoto.com/id/1337144146/vector/default-avatar-profile-icon-vector.jpg?s=612x612&w=0&k=20&c=BIbFwuv7FxTWvh5S3vB6bkT0Qv8Vn8N5Ffseq84ClGI=", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+
+             <% end %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Mes reservations", bookings_path, class: "dropdown-item padding-item item-bold" %>
-              <%= link_to "Ajouter une personnalité", new_personnality_path, class: "dropdown-item padding-item" %>
-              <%= link_to "Editer mon compte utilisateur", edit_user_registration_path, class: "dropdown-item padding-item" %>
-              <%= link_to "Editer une personnalité", edit_personnality_path(current_user), class: "dropdown-item padding-item" %>
-              <%= link_to "Voir toutes les personnalités", personnalities_path, class: "dropdown-item padding-item" %>
+              <%= link_to "++ Ajouter une personnalité", new_personnality_path, class: "dropdown-item padding-item" %>
+              <%= link_to "Gérer mes personnalités", edit_personnality_path(current_user), class: "dropdown-item padding-item border-bottom" %>
               <%= link_to "Voir mon profile", personnality_path(current_user), class: "dropdown-item padding-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item padding-item border-bottom" %>
+              <%= link_to "Editer mon profile", edit_user_registration_path, class: "dropdown-item padding-item border-bottom" %>
+              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item padding-item" %>
           </li>
           </li>
         <% else %>
           <li class="nav-item d-flex align-items-center">
 
-              <%= link_to "Log in", new_user_session_path, class: "dropdown-item padding-item border-bottom" %>
+              <%= link_to "Log in", new_user_session_path, class: "dropdown-item padding-item" %>
 
               <%= image_tag "https://media.istockphoto.com/id/1337144146/vector/default-avatar-profile-icon-vector.jpg?s=612x612&w=0&k=20&c=BIbFwuv7FxTWvh5S3vB6bkT0Qv8Vn8N5Ffseq84ClGI=", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
 
