--- a/app/views/shared/_personnality_card.html.erb
+++ b/app/views/shared/_personnality_card.html.erb
@@ -1,7 +1,6 @@
 
 <div class="cards">
-
-  <% @personnalities.each do |personnality| %>
+  <% @personnalities.order(:name).each do |personnality| %>
       <div class="card-trip m-2">
         <%= link_to personnality_path(personnality), class:"card-trip" do %>
           <% if personnality.photo.key? %>
@@ -15,18 +14,27 @@
           <div class="add-favorite position-absolute top-0 end-0"><i class="fa-regular fa-heart"></i></div>
             <div class="personnality-infos">
               <h2><%= personnality.name %></h2>
-              <h6>
-              <% @joinskills.each do |joinsk| %>
-              <%= joinsk.skill.name %>
-              <% end %>
-              </h6>
-              <p><%= personnality.description %></p>
-              <h3><%= personnality.price %> € / jour</h3>
+
+<div class="d-flex  fs-6">
+<div class="d-flex text-center">
+<% @joinskills.where(personnality_id: personnality.id).each do |join| %>
+<div class="icone-list-pers d-flex p-2 miniicone"> <i class="<%= join.skill.icone %>"></i></div>
+<% end %>
+</div>
+</div>
+
+              <h2><%= personnality.price %> € / jour</h2>
 
             </div>
             <h2 class="card-trip-pricing d-flex"><i class="fa-solid fa-star rose px-1"></i> <%= personnality.rating %></h2>
           </div>
         <% end %>
+
+
+
+
+
+
       </div>
   <% end %>
 </div>
