slyle list skills

--- a/app/assets/stylesheets/components/_icone-list-pers.scss
+++ b/app/assets/stylesheets/components/_icone-list-pers.scss
@@ -5,11 +5,12 @@
 }
 .personnality-infos:hover{
   opacity: 1;
-  transition-duration:0.5s;
+  color: #FF0057;
 
 
   cursor: pointer;
 }
+
 .icone-list-pers {
   font-size: 30px;
 }
