--- a/app/views/personnalities/_form.html.erb
+++ b/app/views/personnalities/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.input :name %>
   <%= f.input :description %>
   <%= f.input :price %>
-  <%= f.input :rating %>
+  <%= f.input :punchline %>
   <%= f.input :photo, as: :file %>
 
   <%=   f.collection_check_boxes :id, Skill.all, :id, :name, item_label_class: 'my-custom-class' # using :roles here is not going to work.
