--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,9 +23,9 @@
              <% end %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Mes reservations", bookings_path, class: "dropdown-item padding-item item-bold" %>
+              <% if current_user.owner? %>
               <%= link_to "++ Ajouter une personnalité", new_personnality_path, class: "dropdown-item padding-item" %>
-              <%= link_to "Gérer mes personnalités", edit_personnality_path(current_user), class: "dropdown-item padding-item border-bottom" %>
-              <%= link_to "Voir mon profile", personnality_path(current_user), class: "dropdown-item padding-item" %>
+              <% end %>
               <%= link_to "Editer mon profile", edit_user_registration_path, class: "dropdown-item padding-item border-bottom" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item padding-item" %>
           </li>
@@ -38,8 +38,8 @@
               <%= image_tag "https://media.istockphoto.com/id/1337144146/vector/default-avatar-profile-icon-vector.jpg?s=612x612&w=0&k=20&c=BIbFwuv7FxTWvh5S3vB6bkT0Qv8Vn8N5Ffseq84ClGI=", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
 
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Inscription", new_user_registration_path, class: "dropdown-item padding-item item-bold" %>
-              <%= link_to "Connexion", new_user_session_path, class: "dropdown-item padding-item border-bottom" %>
+              <%= link_to "Inscription", new_user_registration_path, class: "dropdown-item padding-item item-bold border-bottom" %>
+              <%= link_to "Connexion", new_user_session_path, class: "dropdown-item padding-item" %>
             </div>
           </li>
         <% end %>
