--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -6,9 +6,26 @@
 .my-custom-class {
   padding: 5px 0 5px 10px;
   margin: 5px;
-  border: 1px solid #D23333;
+  border: 1px solid grey;
   width: 46%;
   font-size: 14px;
   text-transform: capitalize;
   border-radius: 10px;
+  font-weight: 500;
+  background-color: rgba(200, 200, 200, 0.5);
 }
+
+.checkbox-container {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap
+
+}
+
+
+.simple_form .optional {
+  border-radius: 5px;
+  font-weight: 300;
+}
+
+.btn-flat {}
